# introspect

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  queries.sql  schema-notes.md
.claude/: mcp.json  settings.json
.claude/hooks/: session-start.sh
.claude/skills/: python-review.md
.claude/skills/nolegend/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
scripts/: install-hooks.sh  pre-commit.sh  worktree.sh
src/introspect/: cli.py  db.py  pricing.py  projects.py  refresh.py  search.py  sql_fragments.py  sql_validation.py
src/introspect/api/: main.py  routes.py
src/introspect/api/handlers/: _helpers.py  bash.py  cost_breakdown.py  cost_overview.py  dashboard.py  mcps.py  raw.py  refresh.py  search.py  sessions.py  sql.py  stats.py  tools.py
src/introspect/mcp/: _register.py  refresh_bridge.py  server.py  tools.py
src/introspect/templates/: _cost_portfolio_panel.html  _daily_cost_panel.html  _hourly_cost_panel.html  _refresh_indicator.html  _session_cost.html  _session_cost_bloat.html  _session_messages.html  _session_tokenscape.html  base.html  bash.html  cost_overview.html  dashboard.html  mcps.html  raw.html  search.html  session_detail.html  sessions.html  sql.html  sql_results.html  stats.html  tools.html
tests/: conftest.py  test_cli.py  test_db.py  test_mcp_tools.py  test_pricing.py  test_projects.py  test_refresh.py  test_routes.py  test_search.py
tests/e2e/: conftest.py  test_crawl.py  test_flows.py
tests/e2e/data/projects/project-alpha/: aaaa1111-aaaa-aaaa-aaaa-aaaaaaaaaaaa.jsonl
tests/e2e/data/projects/project-beta/: bbbb2222-bbbb-bbbb-bbbb-bbbbbbbbbbbb.jsonl
